Fix Some Bugs, Improve